--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -245,3 +245,13 @@ a {
 .cf {
   zoom:1;
 }
+
+img {
+    overflow: hidden;
+    border-radius: 800px;
+    /* padding: 0; */
+    /* margin: 0; */
+    border: 1px solid #b5e853;
+    margin-top: -17%;
+    float: right;
+}
