--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    background: #151515 url("../images/bkg.png") 0 0;
-    color: #eaeaea;
+    /* background: #151515 url("../images/bkg.png") 0 0; */
+    color: #151515;
     font: 16px;
     line-height: 1.5;
     font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
@@ -43,9 +43,9 @@ li {
 */
 
 header {
-    background: rgba(0, 0, 0, 0.1);
+    /* background: rgba(0, 0, 0, 0.1); */
     width: 100%;
-    border-bottom: 1px dashed #b5e853;
+    border-bottom: 1px dashed #151515;
     padding: 20px 0;
     margin: 0 0 40px 0;
 }
@@ -56,7 +56,7 @@ header h1 {
     margin: 0 0 0 -40px;
     font-weight: bold;
     font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-    color: #b5e853;
+    color: #151515;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
     letter-spacing: -1px;
     -webkit-font-smoothing: antialiased;
@@ -100,7 +100,7 @@ h5,
 h6 {
     font-weight: normal;
     font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-    color: #b5e853;
+    color: #151515;
     letter-spacing: -0.03em;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
 }
@@ -216,7 +216,7 @@ hr {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
 }
 
-.btn:hover {
+.btn {
     background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.6), rgba(35, 35, 35, 0.6) 50%, rgba(10, 10, 10, 0.8) 50%, rgba(0, 0, 0, 0.8));
 }
 
